Commenting this executable that most people won't ever use.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,6 @@ target_link_libraries(ur_script_interface ${catkin_LIBRARIES} )
 #add_dependencies(enable_compliance ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} )
 #target_link_libraries(enable_compliance ${catkin_LIBRARIES} ur_script_interface )
 
-add_executable(set_digital_output src/set_digital_output.cpp)
-add_dependencies(set_digital_output ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} )
-target_link_libraries(set_digital_output ${catkin_LIBRARIES} ur_script_interface )
+#add_executable(set_digital_output src/set_digital_output.cpp)
+#add_dependencies(set_digital_output ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} )
+#target_link_libraries(set_digital_output ${catkin_LIBRARIES} ur_script_interface )
